--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <button id="changeColor">Tool Tips</button>
+    <div class="plugin-container">
+      <h3 style="padding: 0 8px">Eaton Acronym Helper</h3>
+      <button id="changeColor" class="tooltip-button">Toggle Tooltips</button>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
