Add clean switch

--- a/src/popup.html
+++ b/src/popup.html
@@ -8,12 +8,12 @@
         <div class="eaton-acronym-plugin-container">
             <input type="text" id="acronymSearchInput" name="acronymSearch" placeholder="Search in Eaton Glossary..." />
 
-            <span class="material-icons">face</span>
+            <!--span class="material-icons">face</span>-->
             <div class="toggle-container">
                 <div style="margin-right: 16px">
-                    <label class="switch" for="checkbox">
-                        <input type="checkbox" id="checkbox" />
-                        <div class="slider round"></div>
+                    <label class="cl-switch">
+                        <input type="checkbox" >
+                        <span class="switcher"></span>
                     </label>
                 </div>
                 <div>Check for acronyms on <strong>Eaton.com</strong></div>
