--- a/src/popup.html
+++ b/src/popup.html
@@ -12,7 +12,7 @@
             <div class="toggle-container">
                 <div style="margin-right: 16px">
                     <label class="cl-switch">
-                        <input type="checkbox" >
+                        <input type="checkbox" id="toggleFindAcronym" >
                         <span class="switcher"></span>
                     </label>
                 </div>
@@ -29,7 +29,7 @@
                     <div class="user-email">evanmclaughlin@eaton.com</div>
                     <div>
                         <div class="user-contributions">My Contributions</div>
-                        <div class="logout">Log Out</div>
+                        <div id="logout" class="logout">Log Out</div>
                     </div>
                 </div>
             </div>
