--- a/src/popup.html
+++ b/src/popup.html
@@ -14,7 +14,7 @@
                 <div class="toggle-container">
                     <div style="margin-right: 16px">
                         <label class="cl-switch">
-                            <input type="checkbox" id="toggleFindAcronym" >
+                            <input type="checkbox" id="toggleFindAcronym" />
                             <span class="switcher"></span>
                         </label>
                     </div>
@@ -32,7 +32,7 @@
                     </button>
                     <div>
                         <div class="user-email">evanmclaughlin@eaton.com</div>
-                        <div style="display: flex;">
+                        <div style="display: flex">
                             <div class="user-contributions">My Contributions</div>
                             <div id="logout" class="logout">Log Out</div>
                         </div>
